gccida/c3/reload
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1170:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1170:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1171:4: error: expected ';' after expression
rtx v37; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1171:5: error: use of undeclared identifier 'v37'
rtx v37; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1178:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1178:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1184:21: error: redefinition of parameter 'rtx'
void (  *v50)( rtx, rtx, void *); // rsi 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1184:26: error: expected identifier
void (  *v50)( rtx, rtx, void *); // rsi 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1190:4: error: expected ';' after expression
rtx v56; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1190:5: error: use of undeclared identifier 'v56'
rtx v56; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1211:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v77; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1224:4: error: expected ';' after expression
rtx j; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1224:5: error: use of undeclared identifier 'j'
rtx j; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1227:6: error: use of undeclared identifier 'v93'
rtx *v93; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1229:4: error: expected ';' after expression
rtx v95; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1229:5: error: use of undeclared identifier 'v95'
rtx v95; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1249:4: error: expected ';' after expression
rtx v115; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1249:5: error: use of undeclared identifier 'v115'
rtx v115; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/reload1.c:1254:4: error: expected ';' after expression
rtx v120; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload/src/obj/reload1.o] Error 1
